--- a/CursoAndroid/app/build.gradle
+++ b/CursoAndroid/app/build.gradle
@@ -21,5 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'org.apache.commons:commons-lang3:3.4'
     compile 'com.android.support:appcompat-v7:23.1.1'
 }
